fix emote modifier story layout issues

--- a/src/devtools/styles/main.scss
+++ b/src/devtools/styles/main.scss
@@ -56,15 +56,15 @@ body {
 
 // ---
 
+.app {
+  width: 100%;
+  min-height: calc(100vh - 60px);
+}
+
 .chat_mockup {
   display: flex;
   flex-direction: row;
   flex: 1;
-
-  .app {
-    width: 100%;
-    min-height: calc(100vh - 60px);
-  }
 
   &__content {
     background: var(--body-background);
@@ -117,23 +117,30 @@ body {
   }
 }
 
-.emote_grid {
-  max-height: calc(100vh - 200px);
-  width: 100%;
-  overflow: auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  background-color: #2c3542;
+.emotes {
+  &__grid {
+    background-color: var(--body-foreground);
+    box-sizing: border-box;
+    display: grid;
+    grid-gap: 4px;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    max-height: calc(100vh - 200px);
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 4px;
+    width: 100%;
 
-  &__cell {
-    height: 50px;
-    width: 10%;
-    min-width: 150px;
-    text-align: center;
-    line-height: 50px;
-    border: 1px solid #888;
-    border-radius: 4px;
-    margin: 4px;
+    &__cell {
+      border-radius: 4px;
+      border: 1px solid $gray-100;
+      height: 50px;
+      line-height: 50px;
+      min-width: 150px;
+      text-align: center;
+    }
+  }
+
+  &__form {
+    z-index: 10;
   }
 }
